# disco-recorder

./: .clangd  .gitignore  .gitmodules  .mxproject  .project  CMakeLists.txt  CMakePresets.json  README.md  disco-rec.ioc  env.sh  mx-generated.cmake
Appli/: .cproject  .project  CMakeLists.txt  CMakePresets.json  STM32N657XX_LRUN.ld  STM32N657XX_LRUN_RAMxspi1.ld  STM32N657XX_LRUN_RAMxspi2.ld  STM32N657XX_ROMxspi1.ld  STM32N657XX_ROMxspi1_RAMxspi2.ld  STM32N657XX_ROMxspi1xspi2_RAMxspi3.ld  STM32N657XX_ROMxspi2.ld  STM32N657XX_ROMxspi2_RAMxspi1.ld  STM32N657XX_ROMxspi3_RAMxspi1xspi2.ld  mx-generated.cmake
Appli/Core/Inc/: app_camerapipeline.h  app_config.h  cacheaxi.h  cmw_camera_conf.h  csi.h  dcmipp.h  ewl_conf.h  ffconf.h  main.h  sd_diskio_config.h  stm32n6570_discovery_conf.h  stm32n6xx_hal_conf.h  stm32n6xx_it.h  venc.h  xspim.h
Appli/Core/Src/: app_camerapipeline.c  cacheaxi.c  csi.c  dcmipp.c  dma2d.c  gpio.c  i2c.c  icache.c  ltdc.c  main.c  sdmmc.c  secure_nsc.c  stm32n6xx_hal_msp.c  stm32n6xx_it.c  sysmem.c  usart.c  venc.c  xspi.c  xspim.c
Appli/Core/app/: camera_subsys.c  camera_subsys.h  fsm.c  fsm.h  sd_interface.c  sd_interface.h  venc_interface.c  venc_interface.h
Appli/Debug/: disco-rec_Appli.elf  disco-rec_Appli.list  disco-rec_Appli.map  makefile  objects.list  sources.mk
Appli/Debug/Core/Src/: main.cyclo  main.d  main.su  secure_nsc.cyclo  secure_nsc.d  secure_nsc.su  stm32n6xx_hal_msp.cyclo  stm32n6xx_hal_msp.d  stm32n6xx_hal_msp.su  stm32n6xx_it.cyclo  stm32n6xx_it.d  stm32n6xx_it.su  subdir.mk  system_stm32n6xx_s.cyclo  system_stm32n6xx_s.d  system_stm32n6xx_s.su
Appli/Debug/Drivers/STM32N6xx_HAL_Driver/: stm32n6xx_hal.d  stm32n6xx_hal_cortex.d  stm32n6xx_hal_dcmipp.cyclo  stm32n6xx_hal_dcmipp.d  stm32n6xx_hal_dcmipp.su  stm32n6xx_hal_dma.cyclo  stm32n6xx_hal_dma.d  stm32n6xx_hal_dma.su  stm32n6xx_hal_dma_ex.cyclo  stm32n6xx_hal_dma_ex.d  stm32n6xx_hal_dma_ex.su  stm32n6xx_hal_exti.d  stm32n6xx_hal_exti.su  stm32n6xx_hal_gpio.d  stm32n6xx_hal_gpio.su  stm32n6xx_hal_pwr.d  stm32n6xx_hal_pwr_ex.d  stm32n6xx_hal_pwr_ex.su  stm32n6xx_hal_rcc.cyclo  stm32n6xx_hal_rcc.d  stm32n6xx_hal_rcc.su  stm32n6xx_hal_rcc_ex.d  stm32n6xx_hal_uart.d  stm32n6xx_hal_uart.su  stm32n6xx_hal_uart_ex.cyclo  stm32n6xx_hal_uart_ex.d  stm32n6xx_hal_xspi.d  stm32n6xx_ll_exti.d  stm32n6xx_ll_rcc.d  stm32n6xx_ll_utils.d  subdir.mk
Appli/drv/: CMakeLists.txt
Appli/drv/Components/: CMakeLists.txt  aps256xx  mx66uw1g45g
Appli/drv/stm32n6570-dk-bsp-local/: stm32n6570_discovery_camera.c
Appli/libs/: CMakeLists.txt
Appli/libs/VideoEncoder/source/common/: encasiccontroller_v2.c
Appli/libs/VideoEncoder/source/h264/: H264EncApi.c  H264Init.c
FSBL/: .cproject  .project  CMakeLists.txt  mx-generated.cmake
FSBL/Core/Inc/: main.h  mdf.h  sai.h  sdmmc.h  stm32n6xx_hal_conf.h  stm32n6xx_it.h  ucpd.h  usb_otg.h  xspi.h
FSBL/Core/Src/: adc.c  gpio.c  main.c  mdf.c  sai.c  stm32n6xx_hal_msp.c  stm32n6xx_it.c  ucpd.c  usb_otg.c  xspi.c
FSBL/Debug/: disco-rec_FSBL.elf  disco-rec_FSBL.list  disco-rec_FSBL.map  makefile  objects.list
FSBL/Debug/Core/Src/: main.cyclo  main.d  main.su  stm32n6xx_hal_msp.cyclo  stm32n6xx_hal_msp.d  stm32n6xx_hal_msp.su  stm32n6xx_it.cyclo  stm32n6xx_it.d  stm32n6xx_it.su  subdir.mk  system_stm32n6xx_fsbl.cyclo  system_stm32n6xx_fsbl.d  system_stm32n6xx_fsbl.su
FSBL/Debug/Drivers/STM32N6xx_HAL_Driver/: stm32n6xx_hal.cyclo  stm32n6xx_hal.d  stm32n6xx_hal.su  stm32n6xx_hal_adc.cyclo  stm32n6xx_hal_adc.d  stm32n6xx_hal_adc.su  stm32n6xx_hal_adc_ex.cyclo  stm32n6xx_hal_adc_ex.d  stm32n6xx_hal_adc_ex.su  stm32n6xx_hal_cortex.cyclo  stm32n6xx_hal_cortex.d  stm32n6xx_hal_cortex.su  stm32n6xx_hal_dma.d  stm32n6xx_hal_dma_ex.d  stm32n6xx_hal_exti.cyclo  stm32n6xx_hal_exti.d  stm32n6xx_hal_gpio.cyclo  stm32n6xx_hal_gpio.d  stm32n6xx_hal_hcd.cyclo  stm32n6xx_hal_hcd.d  stm32n6xx_hal_hcd.su  stm32n6xx_hal_i2c.cyclo  stm32n6xx_hal_i2c.d  stm32n6xx_hal_i2c.su  stm32n6xx_hal_i2c_ex.cyclo  stm32n6xx_hal_i2c_ex.d  stm32n6xx_hal_i2c_ex.su  stm32n6xx_hal_mdf.cyclo  stm32n6xx_hal_mdf.d  stm32n6xx_hal_mdf.su  stm32n6xx_hal_mmc.d  stm32n6xx_hal_mmc_ex.d  stm32n6xx_hal_pwr.cyclo  stm32n6xx_hal_pwr.d  stm32n6xx_hal_pwr.su  stm32n6xx_hal_pwr_ex.cyclo  stm32n6xx_hal_pwr_ex.d  stm32n6xx_hal_rcc.d  stm32n6xx_hal_rcc_ex.cyclo  stm32n6xx_hal_rcc_ex.d  (+46 more)
Secure_nsclib/: secure_nsc.h
