

add_library(hal 
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_adc.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_adc_ex.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_bsec.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_cacheaxi.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_cortex.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_crc.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_crc_ex.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_cryp.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_cryp_ex.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_dcmi.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_dcmipp.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_dma2d.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_dma.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_dma_ex.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_dts.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_eth.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_eth_ex.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_exti.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_fdcan.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_gfxmmu.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_gfxtim.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_gpio.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_gpu2d.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_hash.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_hcd.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_i2c.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_i2c_ex.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_i2s.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_i2s_ex.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_i3c.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_icache.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_irda.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_iwdg.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_jpeg.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_lptim.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_ltdc.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_ltdc_ex.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_mce.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_mdf.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_mdios.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_mmc.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_mmc_ex.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_nand.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_nor.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_pcd.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_pcd_ex.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_pka.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_pssi.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_pwr.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_pwr_ex.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_ramcfg.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_rcc.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_rcc_ex.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_rif.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_rng.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_rng_ex.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_rtc.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_rtc_ex.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_sai.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_sai_ex.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_sd.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_sd_ex.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_sdio.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_sdram.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_smartcard.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_smartcard_ex.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_smbus.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_smbus_ex.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_spdifrx.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_spi.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_spi_ex.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_sram.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_tim.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_tim_ex.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_uart.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_uart_ex.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_usart.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_usart_ex.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_wwdg.c
    stm32n6xx-hal-driver/Src/stm32n6xx_hal_xspi.c
    stm32n6xx-hal-driver/Src/stm32n6xx_ll_adc.c
    stm32n6xx-hal-driver/Src/stm32n6xx_ll_crc.c
    stm32n6xx-hal-driver/Src/stm32n6xx_ll_dlyb.c
    stm32n6xx-hal-driver/Src/stm32n6xx_ll_dma2d.c
    stm32n6xx-hal-driver/Src/stm32n6xx_ll_dma.c
    stm32n6xx-hal-driver/Src/stm32n6xx_ll_exti.c
    stm32n6xx-hal-driver/Src/stm32n6xx_ll_fmc.c
    stm32n6xx-hal-driver/Src/stm32n6xx_ll_gpio.c
    stm32n6xx-hal-driver/Src/stm32n6xx_ll_i2c.c
    stm32n6xx-hal-driver/Src/stm32n6xx_ll_i3c.c
    stm32n6xx-hal-driver/Src/stm32n6xx_ll_lptim.c
    stm32n6xx-hal-driver/Src/stm32n6xx_ll_lpuart.c
    stm32n6xx-hal-driver/Src/stm32n6xx_ll_pka.c
    stm32n6xx-hal-driver/Src/stm32n6xx_ll_pwr.c
    stm32n6xx-hal-driver/Src/stm32n6xx_ll_rcc.c
    stm32n6xx-hal-driver/Src/stm32n6xx_ll_rng.c
    stm32n6xx-hal-driver/Src/stm32n6xx_ll_rtc.c
    stm32n6xx-hal-driver/Src/stm32n6xx_ll_sdmmc.c
    stm32n6xx-hal-driver/Src/stm32n6xx_ll_spi.c
    stm32n6xx-hal-driver/Src/stm32n6xx_ll_tim.c
    stm32n6xx-hal-driver/Src/stm32n6xx_ll_ucpd.c
    stm32n6xx-hal-driver/Src/stm32n6xx_ll_usart.c
    stm32n6xx-hal-driver/Src/stm32n6xx_ll_usb.c
    stm32n6xx-hal-driver/Src/stm32n6xx_ll_utils.c
    stm32n6xx-hal-driver/Src/stm32n6xx_ll_venc.c
    stm32n6xx-hal-driver/Src/stm32n6xx_util_i3c.c
    )
target_include_directories(hal PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/stm32n6xx-hal-driver/Inc )

# adapt bsp library as it does not support camera 1.3.x yet
add_library(bsp
#    stm32n6570-dk-bsp/stm32n6570_discovery_audio.c
    stm32n6570-dk-bsp/stm32n6570_discovery_bus.c
    stm32n6570-dk-bsp/stm32n6570_discovery.c

    stm32n6570-dk-bsp-local/stm32n6570_discovery_camera.c

    stm32n6570-dk-bsp/stm32n6570_discovery_lcd.c
    stm32n6570-dk-bsp/stm32n6570_discovery_sd.c
#    stm32n6570-dk-bsp/stm32n6570_discovery_ts.c
#    stm32n6570-dk-bsp/stm32n6570_discovery_usbpd_pwr.c
    stm32n6570-dk-bsp/stm32n6570_discovery_xspi.c
)

target_include_directories(bsp PRIVATE 
    ${CMAKE_CURRENT_SOURCE_DIR}/stm32n6570-dk-bsp 
    ${CMAKE_CURRENT_SOURCE_DIR}/Components/Common
    ${CMAKE_CURRENT_SOURCE_DIR}/../libs/stm32-mw-camera 
    ${CMAKE_CURRENT_SOURCE_DIR}/../libs/stm32-mw-camera/sensors/imx335
    ${CMAKE_CURRENT_SOURCE_DIR}/../libs/stm32-mw-camera/sensors/vd55g1
    ${CMAKE_CURRENT_SOURCE_DIR}/../libs/stm32-mw-camera/sensors/vd6g
    ${CMAKE_CURRENT_SOURCE_DIR}/../libs/stm32-mw-isp/isp/Inc
)

